<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_beranda"
        android:icon="@drawable/ic_home"
        android:textColor="@color/grey"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_riwayat"
        android:title="@string/riwayat"
        android:icon="@drawable/ic_home"
        android:textColor="@color/grey"
        />
    <item
        android:id="@+id/nav_setting"
        android:title="@string/pengaturan"
        android:icon="@drawable/ic_setting"
        android:textColor="@color/grey"
        />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/keluar"
        android:icon="@drawable/ic_exit"
        android:textColor="@color/grey"
        />
</menu>