<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/firasans_medium"
                android:text="@string/data_penumpang"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"
                android:text="@string/kondisi"/>

            <CheckBox
                android:id="@+id/cb_tunadaksa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tunadaksa"/>

            <CheckBox
                android:id="@+id/cb_tunarungu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tunarungu"/>

            <CheckBox
                android:id="@+id/cb_tunanetra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tunanetra"/>

            <CheckBox
                android:id="@+id/cb_tunawicara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tunawicara"/>

            <CheckBox
                android:id="@+id/cb_tunagrahita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tunagrahita"/>

            <CheckBox
                android:id="@+id/cb_autis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Autis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/membawa_kursi_roda"/>

            <RadioGroup
                android:id="@+id/rg_kursi_roda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_ya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"/>

                <RadioButton
                    android:id="@+id/rb_tidak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/jumlah_penumpang2"/>

            <RadioGroup
                android:id="@+id/rg_total_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/satu"/>

                <RadioButton
                    android:id="@+id/rb_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dua"/>

            </RadioGroup>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorAccent"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>