<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/firasans_medium"
            android:text="@string/register"
            android:textColor="@color/primary_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/primary_text"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/et_name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cth_nama"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/primary_text"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cth_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/primary_text"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:text="@string/nomor_telepon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/primary_text"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                android:text="+62" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_height="wrap_content"
                android:hint="@string/cth_phone"
                android:inputType="phone" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/primary_text"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:text="@string/ulangi_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>
