<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.detailorder.ReviewFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/firasans_medium"
            android:text="@string/bagaimana_perjalanan_anda"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:srb_numberOfStars="5"
            app:srb_starBorderWidth="2"
            app:srb_starCornerRadius="2"
            app:srb_starSize="35dp"
            app:srb_starsSeparation="16dp" />

        <EditText
            android:id="@+id/et_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="45dp"
            android:background="@color/light_purple"
            android:gravity="top|left"
            android:hint="@string/tuliskan_komentar_anda_disini"
            android:inputType="textMultiLine"
            android:lines="6"
            android:padding="8dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorAccent"
            android:text="@string/kirim"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>